k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - image: mariadb:10.5.5
        name: mariadb
        ports:
        - name: mariadb-port
          containerPort: 3306
          protocol: TCP

        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
